# philo_bonus

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  philo.h
sources/: init.c  main.c  processes.c  threads.c  utils.c  utils_2.c  watch.c
